# unified-content-protocol

./: .gitignore  Cargo.toml  FINAL_REPORT.md  JS_SDK_CLI_TEST_REPORT.md  LICENSE  PROPOSAL.md  PUBLISHING.md  README.md  changelog.json  comprehensive_failure_report.md  detailed_failure_analysis.md  first-publish.sh  gtt.txt  mkdocs.yml  notes.txt.  package-lock.json  plan-codegraph-incremental-rebuilds.md  plan.txt  pr.md  pr_body.md  proper.txt  publish.sh  pull.md
.clawdhub/: lock.json
.github/: CODEOWNERS
.ipynb_checkpoints/: bugs-checkpoint.json
artifacts/: codegraph-context-demo-transcript.md  codegraph-python-query-demo-transcript.md  codegraph-query-benchmarks-transcript.md  codegraph-query-edge-cases-transcript.md  codegraph-query-recipes-transcript.md  codegraph-query-tool-wrapper-transcript.md  codegraph-session-observability-demo-transcript.md  codegraph-session-observability-demo.json  ucp-graph-runtime-demo-transcript.md  ucp-python-query-demo-transcript.md
crates/translators/markdown/: Cargo.toml
crates/translators/markdown/src/: from_markdown.rs  lib.rs  to_markdown.rs
crates/translators/markdown/tests/: golden_tests.rs
crates/ucl-parser/: Cargo.toml
crates/ucl-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/ucm-core/: Cargo.toml
crates/ucm-core/src/: block.rs  content.rs  document.rs  edge.rs  id.rs  lib.rs  metadata.rs  normalize.rs
crates/ucm-engine/: Cargo.toml
crates/ucm-engine/src/: config.rs  engine.rs  lib.rs  operation.rs  section.rs  snapshot.rs  transaction.rs  traversal.rs  validate.rs
crates/ucp-agent/: Cargo.toml  README.md
crates/ucp-agent/src/: cursor.rs  executor.rs  expansion.rs  metrics.rs  operations.rs  rag.rs  safety.rs  session.rs
crates/ucp-agent/tests/: integration_tests.rs
crates/ucp-api/: Cargo.toml
crates/ucp-api/src/: codegraph.rs  lib.rs
crates/ucp-api/tests/: codegraph_fixture_tests.rs  graph_runtime.rs
crates/ucp-api/tests/fixtures/edge-cases/: web.ts
crates/ucp-api/tests/fixtures/edge-cases/py/: main.py
crates/ucp-api/tests/fixtures/edge-cases/src/: lib.rs
crates/ucp-api/tests/fixtures/multi-language/py/: main.py
crates/ucp-api/tests/fixtures/multi-language/src/: lib.rs
crates/ucp-api/tests/fixtures/multi-language/web/: app.ts  util.ts
crates/ucp-api/tests/fixtures/single-language-rust/src/: lib.rs
crates/ucp-bench/: Cargo.toml
crates/ucp-bench/benches/: core_benchmarks.rs
crates/ucp-bench/src/: agent.rs  dev_tools.rs  id_mapper.rs  lib.rs  main.rs  metrics.rs  prompt_builder.rs  provider.rs  report.rs  runner.rs  test_cases.rs  test_document.rs  tokenizer.rs
crates/ucp-bench/src/api/: handlers.rs  mod.rs  routes.rs  state.rs
crates/ucp-bench/src/core/: inputs.rs  metrics.rs  mod.rs  runner.rs  tests.rs
crates/ucp-bench/src/documents/: llm_benchmark_compendium.rs  ml_tutorial.rs  mod.rs  quickstart_blog.rs
crates/ucp-bench/src/storage/: mod.rs
crates/ucp-bench/src/suite/: category.rs  config.rs  mod.rs  registry.rs  result.rs
crates/ucp-bench/ui/src/: App.tsx
crates/ucp-bench/ui/src/api/: client.ts
crates/ucp-bench/ui/src/pages/: CoreBenchmark.tsx  DocumentViewer.tsx  NewBenchmark.tsx  Playground.tsx  RunDetails.tsx  TestCatalog.tsx  TestDetails.tsx
crates/ucp-cli/: CLI_CHECKLIST.md  Cargo.toml  README.md
crates/ucp-cli/src/: cli.rs  error.rs  main.rs  output.rs  state.rs
crates/ucp-cli/src/commands/: agent.rs  block.rs  codegraph.rs  completions.rs  document.rs  edge.rs  export.rs  find.rs  import.rs  llm.rs  mod.rs  nav.rs  prune.rs  snapshot.rs  tree.rs  tx.rs  ucl.rs  validate.rs
crates/ucp-cli/tests/: integration_tests.rs
crates/ucp-codegraph/: Cargo.toml
crates/ucp-codegraph/examples/: incremental_benchmark.rs
crates/ucp-codegraph/src/: context.rs  legacy.rs  lib.rs  model.rs  projection.rs
crates/ucp-codegraph/src/legacy/: analyze.rs  build.rs  canonical.rs  extract.rs  filesystem.rs  incremental.rs  resolve.rs  tests.rs  validate.rs
crates/ucp-codegraph/src/legacy/languages/: python.rs  rust.rs  ts_js.rs
crates/ucp-codegraph/src/programmatic/: graph.rs  mod.rs  query.rs  session.rs  types.rs
crates/ucp-codegraph/tests/: programmatic_api.rs
crates/ucp-graph/: Cargo.toml
crates/ucp-graph/src/: lib.rs  navigator.rs  query.rs  session.rs  types.rs
crates/ucp-graph/src/store/: document.rs  mod.rs  sqlite.rs
crates/ucp-graph/tests/: runtime.rs
crates/ucp-llm/: Cargo.toml
crates/ucp-llm/src/: context.rs  id_mapper.rs  lib.rs  prompt_builder.rs
crates/ucp-observe/: Cargo.toml
crates/ucp-observe/src/: lib.rs
crates/ucp-python/: Cargo.toml  README.md  pyproject.toml
crates/ucp-python/python/ucp/: __init__.py  query.py  query_benchmarks.py  query_tools.py
crates/ucp-python/src/: agent.rs  block.rs  codegraph.rs  content.rs  document.rs  edge.rs  engine.rs  graph.rs  json.rs  lib.rs  llm.rs  observe.rs  section.rs  snapshot.rs  types.rs
crates/ucp-python/tests/: conftest.py  test_agent.py  test_codegraph.py  test_comprehensive_failures.py  test_content.py  test_document.py  test_edges.py  test_engine.py  test_failure_regression.py  test_graph.py  test_integration.py  test_llm.py  test_query_api.py  test_query_tools.py  test_section.py  test_snapshots.py
crates/ucp-wasm/: Cargo.toml
crates/ucp-wasm/pkg/: package.json  ucp_wasm.d.ts  ucp_wasm.js  ucp_wasm_bg.wasm  ucp_wasm_bg.wasm.d.ts
crates/ucp-wasm/src/: agent.rs  block.rs  content.rs  document.rs  edge.rs  engine.rs  errors.rs  lib.rs  llm.rs  observe.rs  section.rs  snapshot.rs  types.rs
crates/ucp-wasm/tests/: package-lock.json  package.json  ucp.test.js
docs/: README.md  codegraph-schema.md  getting-started.md  index.md
ops/: post-sprint-37-codegraph-follow-on-sequence.md  sprint-36-ucm-codegraph-readiness.md  sprint-37-codebase-ucm-graph.md  sprint-38-codegraph-dependency-fidelity.md  sprint-39-codegraph-nested-symbol-depth.md  sprint-40-codegraph-external-dependencies-and-language-pack.md  sprint-41-codegraph-scale-ignore-bindings-hardening.md  sprint-42-codegraph-current-language-coverage-hardening.md  sprint-59-codegraph-shadowing-no-fallback.md  (+32 more)
(+148 files in other folders)
