[package]
name = "ucl-parser"
description = "Parser for the Unified Content Language (UCL)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ucp", "ucl", "parser", "content", "language"]
categories = ["parsing", "text-processing"]
readme = "README.md"

[dependencies]
ucm-core = { workspace = true }
ucm-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
logos = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
