[package]
name = "ucm-core"
description = "Core types and traits for the Unified Content Model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ucp", "ucm", "content", "document", "core"]
categories = ["data-structures"]
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
unicode-normalization = { workspace = true }
chrono = { workspace = true }
base64 = "0.22"

[dev-dependencies]
proptest = { workspace = true }
