[package]
name = "ucm-engine"
description = "Transformation engine for the Unified Content Model"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ucm-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
