[package]
name = "ucp-agent"
description = "Agent graph traversal system for UCP knowledge graphs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ucp", "agent", "traversal", "knowledge-graph", "llm"]
categories = ["data-structures", "algorithms"]
readme = "../../README.md"

[dependencies]
# Core UCP crates
ucm-core = { workspace = true }
ucm-engine = { workspace = true }
ucl-parser = { workspace = true }

# Async support
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde", "js"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
