[package]
name = "ucp-api"
description = "High-level API for UCP"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ucm-core = { workspace = true }
ucm-engine = { workspace = true }
ucl-parser = { workspace = true }
ucp-observe = { workspace = true }
ucp-llm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"

[dev-dependencies]
tempfile = "3.10"
