[package]
name = "ucp-bench"
description = "Benchmarking system for UCP including LLM evaluation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ucm-core = { workspace = true }
ucm-engine = { workspace = true }
ucl-parser = { workspace = true }
ucp-observe = { workspace = true }
ucp-translator-markdown = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
tiktoken-rs = { workspace = true }

uuid = { version = "1", features = ["v4"] }
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
dotenvy = "0.15"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
criterion = { workspace = true }
tokio-test = "0.4"

[[bench]]
name = "core_benchmarks"
harness = false

[[bin]]
name = "ucp-bench"
path = "src/main.rs"
