[package]
name = "ucp-codegraph"
description = "CodeGraph extraction and projection for UCP"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ucm-core = { workspace = true }
ucp-graph = { workspace = true }
ucp-llm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
# Pin exact Tree-sitter versions so manifest-path builds (maturin/wasm-pack)
# stay on a single compatible API surface across workspace, Python, and WASM
# builds even when they resolve outside the workspace lockfile.
tree-sitter = "=0.20.10"
tree-sitter-rust = "=0.20.3"
tree-sitter-python = "=0.20.3"
tree-sitter-typescript = "=0.20.3"
tree-sitter-javascript = "=0.20.0"

[dev-dependencies]
tempfile = "3.10"
