[package]
name = "ucp-graph"
description = "Generic graph runtime, stores, and traversal APIs for UCP documents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ucm-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.38.0", features = ["bundled"] }
