[package]
name = "ucp-translator-markdown"
description = "Markdown translator for UCP"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ucp", "markdown", "translator", "parser"]
categories = ["text-processing"]
readme = "../../../README.md"

[dependencies]
ucm-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
